--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <body>
 
 <header>
-    <h1>Otaku News BD</h1>
+      <h1>Otaku News BD</h1>
     <p>Your Daily Anime News Hub</p>
+
+    <p>Welcome to Bangladesh Anime News Website</p>
+
+    <a href="https://t.me/iEUDWr7fDwcyYTg1" target="_blank">
+        🔔 Join Our Telegram Channel
+    </a>
 </header>
 
 <nav>
