--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 🎈 𝘏𝘭𝘸 𝘍𝘳𝘪𝘦𝘯𝘥𝘴‼️
 𝘞𝘦𝘭𝘤𝘰𝘮𝘦 𝘵𝘰 𝘔𝘺 𝘣𝘪𝘰 😘
 
-𝘕𝘢𝘮𝘦 :- ᴍᴀʜɪᴍ
-
+𝘕𝘢𝘮𝘦 :- Kazi ᴍᴀʜɪᴍ
+    
+I am Genius 
+    
 𝘒𝘪𝘯𝘥 :- 𝘔𝘶𝘴𝘭𝘪𝘮
 ❤️ 𝘍𝘳𝘰𝘮 🇧🇩 ᴛᴀɴɢᴀɪʟ 🍀 - 𝘉𝘋
 
@@ -57,15 +59,25 @@
 𝘊𝘭𝘢𝘴𝘴 :- ꜱꜱᴄ 2ᴋ27
 
 𝘓𝘢𝘯𝘥 𝘰𝘯 𝘌𝘢𝘳𝘵𝘩 :- 22 ᴅᴇᴄ
+    Phone number- Not easy 
+    Email - shakil397576@gmail.com
 
 𝘎𝘰𝘢𝘭 :- 𝘏𝘰𝘻-ʜᴇᴀᴠᴇɴ
 
-𝘜𝘴𝘦𝘳𝘯𝘢𝘮𝘦 📱 :- @ᴘꜱʏᴄʜᴏ001
+𝘜𝘴𝘦𝘳𝘯𝘢𝘮𝘦 📱 :- @Genius_695 ( Telegram )
 </div>
 
 <a href="https://t.me/+nowN3zzrK2QzMTFl" target="_blank">
 📢 Join My Telegram
 </a>
+    <a href="https://www.youtube.com/@mx-okamiz57" target="_blank">
+▶️ Subscribe My YouTube Channel
+</a>
+
+<a href="https://discord.com/users/mahimaxt" target="_blank">
+💬 Discord: mahimaxt
+</a>
+
 
 <a href="https://www.instagram.com/your_avery36/?__pwa=1" target="_blank">
 📸 Follow Me on Instagram
