--- a/index.html
+++ b/index.html
@@ -35,8 +35,40 @@
             white-space: pre-line;
             font-size: 16px;
             line-height: 1.6;
-        }
-    </style>
+        }.youtube {
+    background: #ff0000;
+    color: white;
+}
+.youtube:hover {
+    background: #cc0000;
+}
+
+.discord {
+    background: #5865F2;
+    color: white;
+}
+.discord:hover {
+    background: #404eed;
+}
+
+    </style><a href="https://www.youtube.com/@mx-okamiz57" target="_blank" class="youtube">
+▶️ Subscribe My YouTube
+</a>
+
+<a href="https://discord.com/users/mahimaxt" target="_blank" class="discord">
+💬 Discord: mahimaxt
+</a>
+
+    a {
+    transition: 0.3s;
+}
+
+a:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 15px rgba(0,255,204,0.7);
+}
+
+    
 </head>
 <body>
 
