--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Thats 2 Line -
 𝘜𝘴𝘦𝘳𝘯𝘢𝘮𝘦 📱 :- @Genius_695 ( Telegram )
 </div>
 
-<a href="https://t.me/+nowN3zzrK2QzMTFl" target="_blank">
+<a href="https:/https://t.me/EditingCourt/" target="_blank">
 📢 Join My Telegram
 </a>
     <a href="https://www.youtube.com/@mx-okamiz57" target="_blank">
