--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 40px;
+    .gmail {
+    background: #D44638;
+    color: white;
+}
+.gmail:hover {
+    background: #b23121;
+}
+
+    
 }
 
 .box {
@@ -109,6 +118,9 @@ a:hover {
 
 𝘋𝘳𝘦𝘢𝘮 :- 𝘉𝘦 ʀɪᴄʜ
 
+    Trusting people is, what’s most foolish in this world-- 
+    --Equality is just a fantasy for, the weak to cling to
+
 𝘊𝘭𝘢𝘴𝘴 :- ꜱꜱᴄ 2ᴋ27
 
 𝘓𝘢𝘯𝘥 𝘰𝘯 𝘌𝘢𝘳𝘵𝘩 :- 22 ᴅᴇᴄ
@@ -133,6 +145,10 @@ a:hover {
 
 <a href="https://discord.com/users/mahimaxt" target="_blank" class="discord">
 💬 Discord: mahimaxt
+</a>
+    
+<a href="mailto:shakil397576@gmail.com" class="gmail">
+📧 Email Me
 </a>
 
 </div>
