--- a/index.html
+++ b/index.html
@@ -2,156 +2,151 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Mahim | Bio</title>
+<title>Mahim Bio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-    color: white;
+body{
+    margin:0;
+    padding:0;
     font-family: Arial, sans-serif;
-    text-align: center;
-    padding: 40px;
-    .gmail {
-    background: #D44638;
-    color: white;
-}
-.gmail:hover {
-    background: #b23121;
+    background: linear-gradient(135deg,#000428,#004e92);
+    color:white;
+    text-align:center;
 }
 
-    
+.box{
+    max-width:400px;
+    margin:40px auto;
+    background:rgba(0,0,0,0.6);
+    padding:20px;
+    border-radius:20px;
+    box-shadow:0 0 20px cyan;
 }
 
-.box {
-    max-width: 520px;
-    margin: auto;
-    background: rgba(0,0,0,0.4);
-    padding: 30px;
-    border-radius: 20px;
+.profile{
+    width:120px;
+    height:120px;
+    border-radius:50%;
+    border:3px solid cyan;
+    animation: pulse 2s infinite;
 }
 
-.bio {
-    white-space: pre-line;
-    font-size: 16px;
-    line-height: 1.7;
-    margin-bottom: 20px;
+@keyframes pulse{
+    0%{box-shadow:0 0 5px cyan;}
+    50%{box-shadow:0 0 25px cyan;}
+    100%{box-shadow:0 0 5px cyan;}
 }
 
-a {
-    display: block;
-    margin: 12px 0;
-    padding: 14px;
-    border-radius: 30px;
-    text-decoration: none;
-    font-weight: bold;
-    color: black;
-    background: #00c6ff;
-    transition: 0.3s;
+.bio{
+    white-space:pre-line;
+    margin-top:15px;
+    font-size:14px;
 }
 
-a:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 15px rgba(0,255,204,0.7);
+a.btn{
+    display:block;
+    margin:10px 0;
+    padding:12px;
+    border-radius:30px;
+    color:white;
+    text-decoration:none;
+    font-weight:bold;
 }
 
-/* Profile Photo */
-.profile {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 4px solid #00ffcc;
-    box-shadow: 0 0 20px #00ffcc;
-    margin-bottom: 20px;
+.youtube{background:#ff0000;}
+.discord{background:#5865F2;}
+.telegram{background:#0088cc;}
+.instagram{background:#e1306c;}
+.gmail{background:#d93025;}
+
+.time{
+    margin-top:15px;
+    font-size:14px;
+    color:#00ffff;
 }
 
-/* Button Colors */
-.telegram {
-    background: #229ED9;
-    color: white;
+/* rating */
+.rating-box{
+    margin-top:20px;
 }
-.telegram:hover {
-    background: #1c8dc4;
+.stars span{
+    font-size:30px;
+    cursor:pointer;
+    color:gray;
 }
-
-.youtube {
-    background: #ff0000;
-    color: white;
-}
-.youtube:hover {
-    background: #cc0000;
-}
-
-.discord {
-    background: #5865F2;
-    color: white;
-}
-.discord:hover {
-    background: #404eed;
-}
-
-.instagram {
-    background: #ff8a00;
-    color: white;
-}
-.instagram:hover {
-    background: #e67600;
+.stars span:hover{
+    color:gold;
 }
 </style>
 </head>
 
 <body>
 
+<audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
+
 <div class="box">
 
-<img src="profile.jpg" alt="Mahim" class="profile">
+<img src="profile.jpg" class="profile">
 
 <div class="bio">
 ᴇᴀꜱʏ ]
+🎈 Hlw Friends‼️
+Welcome to My bio 😘
 
-🎈 𝘏𝘭𝘸 𝘍𝘳𝘪𝘦𝘯𝘥𝘴‼️
-𝘞𝘦𝘭𝘤𝘰𝘮𝘦 𝘵𝘰 𝘔𝘺 𝘣𝘪𝘰 😘
+Name :- ᴍᴀʜɪᴍ
+Kind Muslim
+❤️ From 🇧🇩 Tangail-BD
 
-𝘕𝘢𝘮𝘦 :- ᴍᴀʜɪᴍ
+Dream :- Be rich
+Class :- SSC 2k27
+Land on Earth :- 22 Dec
+Goal :- Hoz-heaven
 
-𝘒𝘪𝘯𝘥 :- 𝘔𝘶𝘴𝘭𝘪𝘮
-❤️ 𝘍𝘳𝘰𝘮 🇧🇩 ᴛᴀɴɢᴀɪʟ 🍀 - 𝘉𝘋
-
-𝘋𝘳𝘦𝘢𝘮 :- 𝘉𝘦 ʀɪᴄʜ
-
-    Trusting people is, what’s most foolish in this world-- 
-    --Equality is just a fantasy for, the weak to cling to
-
-𝘊𝘭𝘢𝘴𝘴 :- ꜱꜱᴄ 2ᴋ27
-
-𝘓𝘢𝘯𝘥 𝘰𝘯 𝘌𝘢𝘳𝘵𝘩 :- 22 ᴅᴇᴄ
-
-𝘎𝘰𝘢𝘭 :- 𝘏𝘰𝘻-ʜᴇᴀᴠᴇɴ
-
-𝘜𝘴𝘦𝘳𝘯𝘢𝘮𝘦 📱 :- @ᴘꜱʏᴄʜᴏ001
+Username 📱 :- @psycho001
 </div>
 
+<a class="btn youtube" href="https://www.youtube.com/@mx-okamiz57">YouTube</a>
+<a class="btn discord" href="#">Discord : mahimaxt</a>
+<a class="btn telegram" href="https://t.me/EditingCourt">Telegram Channel</a>
+<a class="btn instagram" href="https://www.instagram.com/your_avery36/">Instagram</a>
+<a class="btn gmail" href="mailto:shakil397576@gmail.com">Gmail</a>
 
-<a href="https://t.me/EditingCourt" target="_blank" class="telegram">
-📢 EditingCourt Telegram Channel
-</a>
+<div class="time" id="bdtime"></div>
 
-<a href="https://www.instagram.com/your_avery36/?__pwa=1" target="_blank" class="instagram">
-📸 Follow Me on Instagram
-</a>
-
-<a href="https://www.youtube.com/@mx-okamiz57" target="_blank" class="youtube">
-▶️ Subscribe My YouTube
-</a>
-
-<a href="https://discord.com/users/mahimaxt" target="_blank" class="discord">
-💬 Discord: mahimaxt
-</a>
-    
-<a href="mailto:shakil397576@gmail.com" class="gmail">
-📧 Email Me
-</a>
+<div class="rating-box">
+<p>⭐ Rate My Bio</p>
+<div class="stars">
+<span onclick="rate(1)">★</span>
+<span onclick="rate(2)">★</span>
+<span onclick="rate(3)">★</span>
+<span onclick="rate(4)">★</span>
+<span onclick="rate(5)">★</span>
+</div>
+<p id="rating-text"></p>
+</div>
 
 </div>
+
+<script>
+function updateTime(){
+    const time = new Date().toLocaleTimeString("en-US",{timeZone:"Asia/Dhaka"});
+    document.getElementById("bdtime").innerText = "🇧🇩 Bangladesh Time: " + time;
+}
+setInterval(updateTime,1000);
+updateTime();
+
+function rate(star){
+    const stars=document.querySelectorAll(".stars span");
+    stars.forEach((s,i)=>{
+        s.style.color = i < star ? "gold":"gray";
+    });
+    document.getElementById("rating-text").innerText=
+        "Thanks! You rated "+star+"⭐";
+}
+</script>
 
 </body>
 </html>
