Replace profile image with Insux.jpg

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ a.btn{
 
 <div class="box">
 
-<img src="profile.jpg" class="profile">
+<img src="Insux.jpg" class="profile">
 
 <button class="music-btn" onclick="toggleMusic()">🎵 Play / Pause Music</button>
 
