--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a.btn{
 
 <!-- 🎵 MUSIC -->
 <audio id="bgMusic" loop>
-  <source src="music.mp3" type="audio/mpeg">
+  <source src="Chubina.mp3" type="audio/mpeg">
 </audio>
 
 <div class="box">
