--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@ button{
 
 <!-- Music -->
 <audio id="bgMusic" loop>
-  <source src="Chubina.mp3" type="audio/mpeg">
+  <source src="Chubina_v2.mp3" type="audio/mpeg">
 </audio>
+
 
 <button onclick="toggleMusic()">🎵 Play / Pause Music</button>
 
