--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@ button{
 <div class="container">
 
 <!-- Profile Image -->
-<img src="profile.jpg" alt="Profile">
+<img src="profile_v2.jpg" alt="Profile">
+
 
 <h2>🎈 Hello Friends!</h2>
 
