--- a/index.html
+++ b/index.html
@@ -1,1 +1,285 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Mahim | Personal Web</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+
+/* ---------- LOADING ---------- */
+#loading{
+position:fixed;inset:0;
+background:black;
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+z-index:9999;
+color:white;
+}
+.loader{
+width:60px;height:60px;
+border:6px solid #333;
+border-top:6px solid lime;
+border-radius:50%;
+animation:spin 1s linear infinite;
+margin-bottom:15px;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
+
+/* ---------- CODE GATE ---------- */
+#gate{
+display:none;
+position:fixed;inset:0;
+background:#000;
+color:white;
+display:flex;
+align-items:center;
+justify-content:center;
+flex-direction:column;
+z-index:9998;
+}
+#codeBox{
+background:#111;
+padding:25px;
+border-radius:10px;
+text-align:center;
+}
+#randomCode{
+font-size:28px;
+letter-spacing:4px;
+color:lime;
+margin-bottom:10px;
+}
+#gate input{
+padding:10px;
+width:200px;
+border:none;
+outline:none;
+border-radius:5px;
+margin-top:10px;
+}
+#gate button{
+margin-top:10px;
+padding:8px 20px;
+border:none;
+background:lime;
+cursor:pointer;
+border-radius:5px;
+}
+
+/* ---------- MAIN ---------- */
+body{
+background:url("Pitchdo.jpg") no-repeat center/cover;
+min-height:100vh;
+display:none;
+}
+
+#pcBtn{
+position:fixed;
+top:10px;
+left:50%;
+transform:translateX(-50%);
+padding:10px 30px;
+background:black;
+color:white;
+border:2px solid lime;
+cursor:pointer;
+}
+
+.music-btn{
+margin-top:60px;
+display:block;
+padding:15px;
+background:linear-gradient(to right,green,red);
+color:white;
+text-align:center;
+cursor:pointer;
+}
+
+/* ---------- LAYOUT ---------- */
+.container{
+display:flex;
+padding:20px;
+color:black;
+}
+
+.left{
+width:30%;
+}
+.icon-btn{
+display:flex;
+align-items:center;
+margin:15px 0;
+cursor:pointer;
+}
+.icon-btn img{
+width:45px;height:45px;
+border-radius:50%;
+margin-right:10px;
+}
+.icon-btn span{
+color:black;
+text-shadow:0 0 8px #00ff00;
+}
+
+.right{
+width:70%;
+padding:20px;
+}
+.right h2{color:green}
+.right p{margin:8px 0;color:red}
+
+/* ---------- RATING ---------- */
+.stars span{
+font-size:30px;
+cursor:pointer;
+color:gray;
+}
+.stars span.active{color:gold}
+
+/* ---------- FUN SCREEN ---------- */
+#funScreen{
+position:fixed;inset:0;
+background:black;
+color:white;
+display:none;
+align-items:center;
+justify-content:center;
+font-size:30px;
+z-index:9997;
+}
+</style>
+</head>
+
+<body>
+
+<!-- LOADING -->
+<div id="loading">
+<div class="loader"></div>
+<p>Loading Mahim's World...</p>
+</div>
+
+<!-- CODE GATE -->
+<div id="gate">
+<div id="codeBox">
+<div id="randomCode"></div>
+<p style="color:gray">Submit this code to open this web</p>
+<input id="codeInput" placeholder="Enter code">
+<br>
+<button onclick="checkCode()">Submit</button>
+<p id="msg" style="color:red"></p>
+</div>
+</div>
+
+<button id="pcBtn" onclick="alert('Turn on Desktop mode from browser settings')">PC MODE</button>
+
+<div class="music-btn" onclick="playMusic()">Click For Peace Music</div>
+<audio id="music" src="Chubina_v2.mp3"></audio>
+
+<div class="container">
+<div class="left">
+<div class="icon-btn" onclick="openLink('https://www.youtube.com/@mx-okamiz57')">
+<img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+<span>Subscribe My Youtube</span>
+</div>
+
+<div class="icon-btn" onclick="openLink('https://t.me/EditingCourt')">
+<img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png">
+<span>Join For PfP</span>
+</div>
+
+<div class="icon-btn" onclick="openLink('https://discord.com/users/mahimaxt')">
+<img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png">
+<span>Visit My Discord</span>
+</div>
+
+<div class="icon-btn" onclick="openLink('https://www.instagram.com/your_avery36')">
+<img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png">
+<span>Visit For Contact</span>
+</div>
+
+<div class="icon-btn" onclick="openLink('mailto:shakil397576@gmail.com')">
+<img src="https://cdn-icons-png.flaticon.com/512/732/732200.png">
+<span>Visit For Contact</span>
+</div>
+</div>
+
+<div class="right">
+<h2>Hello I Am Mahim - SSC 2027 Batch</h2>
+<p>My Clan Is Kazi - Muslim</p>
+<p>Dream: Be Rich & Businessman</p>
+<p>From Tangail [BD]</p>
+<p>Birthday: 22 Dec 2008 (Age 16)</p>
+
+<br>
+<button onclick="showFun()">See Fun</button>
+
+<h3>Rate My Bio</h3>
+<div class="stars" id="stars">
+<span onclick="rate(1)">★</span>
+<span onclick="rate(2)">★</span>
+<span onclick="rate(3)">★</span>
+<span onclick="rate(4)">★</span>
+<span onclick="rate(5)">★</span>
+</div>
+<p id="rateText">0 vote | Average 0</p>
+</div>
+</div>
+
+<div id="funScreen">Its Just For Fun</div>
+
+<script>
+/* loading */
+setTimeout(()=>{
+document.getElementById("loading").style.display="none";
+document.getElementById("gate").style.display="flex";
+},3000);
+
+/* random code */
+let code=Math.random().toString(36).substring(2,6).toUpperCase();
+document.getElementById("randomCode").innerText=code;
+
+function checkCode(){
+let v=document.getElementById("codeInput").value.toUpperCase();
+if(v===code){
+document.getElementById("gate").style.display="none";
+document.body.style.display="block";
+}else{
+document.getElementById("msg").innerText="Wrong Code!";
+}
+}
+
+/* music */
+function playMusic(){
+document.getElementById("music").play();
+}
+
+/* links */
+function openLink(u){window.open(u,"_blank");}
+
+/* fun */
+function showFun(){
+let f=document.getElementById("funScreen");
+f.style.display="flex";
+setTimeout(()=>f.style.display="none",5000);
+}
+
+/* rating */
+let total=0,votes=0;
+function rate(n){
+votes++;
+total+=n;
+document.querySelectorAll(".stars span").forEach((s,i)=>{
+s.classList.toggle("active",i<n);
+});
+document.getElementById("rateText").innerText=
+votes+" vote | Average "+(total/votes).toFixed(1);
+}
+</script>
+
+</body>
+</html>
 
